# University-C

./: .gitignore  .gitmodules  LICENSE  LWM  README.md  build  main.cpp  main.h
3SST/4LW/tests/: CMakeLists.txt
Documents/: COMPLETE_Лабораторная работа 1 VS 2015. ПМИб-1.docx  COMPLETE_Лабораторная работа 1 VS 2017. ПМИб-1.docx  COMPLETE_Лабораторная работа 2_ПМИб-1.docx
LABW1/: LABWORK1.sln
LABW10/: Makefile  array.cpp  array.h  tasks.cpp
LABW11/: Makefile  array.cpp  arrays1d.cpp  arrays1d.h  arrays2d.cpp  arrays2d.h  main.cpp  useful.h
LABW12/: main.cpp  string.cpp  string.h  useful.h
LABW13/: Makefile  files.cpp  files.h  main.cpp
LABW14/: Makefile  files.cpp  files.h  main.cpp  struct.cpp  struct.h  useful.h  vector.cpp  vector.h
LABW2/: 2task2  2task4  2task4.cpp  2task5  2task6.cpp  2task7.cpp
LABW3/: 3task1.cpp  3task13.cpp  3task14.cpp  3task15.cpp  3task16.cpp  3task17.cpp  3task18.cpp  3task2.cpp  3task25.cpp  3task4.cpp  3task5.cpp  3task6.cpp
LABW4/: 4task_1.cpp  4task_10.cpp  4task_14.cpp  4task_4.cpp  4task_5.cpp  4task_6.cpp  4task_7.cpp  4task_8.cpp
LABW5/: 5task_1.cpp  5task_10.cpp  5task_11.cpp  5task_15.cpp  5task_17.cpp  5task_4.cpp  5task_9.cpp
LABW6/: 6task_10.cpp  6task_11.cpp  6task_13.cpp  6task_14.cpp  6task_15.cpp  6task_16.cpp  6task_2.cpp  6task_5.cpp  6task_6.cpp  6task_7.cpp  6task_9.cpp
LABW7/: 7task3.h  7task_10.cpp  7task_2.cpp  7task_3.cpp  7task_4.cpp  7task_7.cpp  7task_8.cpp
LABW8/: 8task_1.cpp  8task_2.cpp  8task_3.cpp  8task_5.cpp  8task_6.cpp  8task_7.cpp
LABW9/: Makefile  functions.cpp  functions.h  (+2 more)
(+371 files in other folders)
